<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/friendsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_friends"
        android:title="@string/friends"/>
    <item
        android:id="@+id/chatFragment"
        android:enabled="true"
        android:icon="@drawable/ic_chat"
        android:title="@string/chat"/>
    <item
        android:id="@+id/mapFragment"
        android:enabled="true"
        android:icon="@drawable/ic_map"
        android:title="@string/map"/>
    <item
        android:id="@+id/profileFragment"
        android:enabled="true"
        android:icon="@drawable/ic_profile"
        android:title="@string/profile"/>
    <item
        android:id="@+id/settingsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"/>

</menu>